// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions > api routingQuery should gracefully handle bad response 1`] = `
Array [
  Array [
    Object {
      "payload": Object {
        "activeItinerary": 0,
        "routingType": "ITINERARY",
        "searchId": "abcd1234",
      },
      "type": "ROUTING_REQUEST",
    },
  ],
  Array [
    [Function],
  ],
  Array [
    Object {
      "payload": Object {
        "error": [Error: only http(s) protocols are supported],
        "searchId": "abcd1234",
      },
      "type": "ROUTING_ERROR",
    },
  ],
  Array [
    Object {
      "payload": Object {
        "activeItinerary": 0,
        "routingType": "ITINERARY",
        "searchId": "abcd1235",
      },
      "type": "ROUTING_REQUEST",
    },
  ],
  Array [
    [Function],
  ],
]
`;

exports[`actions > api routingQuery should make a query to OTP 1`] = `
Array [
  Array [
    Object {
      "payload": Object {
        "activeItinerary": 0,
        "routingType": "ITINERARY",
        "searchId": "abcd1234",
      },
      "type": "ROUTING_REQUEST",
    },
  ],
  Array [
    [Function],
  ],
]
`;
